v1.0.31 fix page spacing + wnrs button colour + image span alignment

--- a/assets/typography.css
+++ b/assets/typography.css
@@ -322,7 +322,6 @@ footer
 }
 
 .div-with-image span {
-    display: inline-block;
     vertical-align: middle;
     margin-bottom: 0;
 }
@@ -638,10 +637,6 @@ footer
     width: 100%;
     height: 100px;
     resize: vertical;
-}
-
-#chat-result {
-    margin-top: 20px;
 }
 
 #graph-trade .js-plotly-plot .plotly .cursor-ew-resize {
